--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.wiisportsresorts.clockwidgets">
 
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.SET_ALARM" />
+
     <application
-        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -31,15 +31,15 @@
 
         <receiver
             android:name=".widgets.StackedDigital"
-            android:label="@string/stacked_digital_label"
             android:description="@string/stacked_digital_description"
-            android:exported="false">
+            android:exported="false"
+            android:label="@string/stacked_digital_label">
 
             <intent-filter>
+                <action android:name="dev.wiisportsresorts.clockwidgets.CLOCK_CLICK" />
+                <action android:name="dev.wiisportsresorts.clockwidgets.CLOCK_CLICK" />
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.appwidget.action.APPWIDGET_PINNED" />
-                <action android:name="dev.wiisportsresorts.clockwidgets.CLOCK_TICK" />
-                <action android:name="dev.wiisportsresorts.clockwidgets.CLOCK_CLICK" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
 
